--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,8 @@ block layout-content
       div.Title
         h3 Making the Best
         h1 Food For Devs
+        p Fudge and more Fudge
+        p Fudge and more Fudge
       span.Details Access the WHATABYTE Team Portal
     div.NavButtons
       a(href="/user")
